# sample-c-code-01

./: .gitignore  CMakeLists.txt
Inc/: my_math_function.h
Src/: main.c  my_math_function.c
include/: my_math_function.h
src/: my_math_function.c
tests/: CMakeLists.txt  test_my_math_function.cpp
